tests/ui/parser/using_empty_list.sol
// Ported from test/libsolidity/syntaxTests/using/using_empty_list_file_level.sol.

using {} for uint; //~ ERROR: expected identifier
